@@ -6,45 +6,53 @@ import java.util.*;
 
 public class RoomService {
 
-    // 1. Declare a Collection to store Room Inventory
     private Collection<Room> inventory;
 
     public RoomService() {
+        this.inventory = new LinkedHashSet<>();
+    }
 
-        // 2. Initialize Collection and assign it to the Room Inventory
-        this.inventory = new ArrayList<>();
+    public boolean hasRoom(Room room) {
+
+        // 1. Returns a boolean that indicates if the Room Inventory contains a Room.
+
+        return this.inventory.contains(room);
+    }
+
+    public Collection<Room> asArray() {
+
+        // 2. Returns all Rooms as an Array of Rooms in the **order** they were Added.
+      return List.of(this.inventory.toArray(new Room[0]));
 
     }
 
-    public Collection<Room> getInventory(){
+    public Collection<Room> getByType(String type){
 
-        // 3. Return the Room Inventory
+	/*
+	   3. Return a new Collection of Rooms where Room#type matches the provided String.
+		  The original Room Inventory collection MUST NOT BE MODIFIED.
+	*/
+        Collection<Room> copy = new HashSet<>(this.inventory);
+        copy.removeIf(r -> !r.getType().equals(type));
 
-        return inventory;
+        return copy;
 
     }
 
+    public Collection<Room> getInventory() {
+        return new HashSet<>(this.inventory);
+    }
 
-    public void createRoom(String name, String type, int capacity, double rate) {
-
-        // 4. Add a new Room to the Room Inventory using the provided parameters
-        Room newRoom = new Room(name, type, capacity, rate);
-        inventory.add(newRoom);
-
+    public void createRoom(String name, String type, int capacity, double price) {
+        this.inventory.add(new Room(name, type, capacity, price));
     }
 
     public void createRooms(Room[] rooms) {
-
-        this.inventory.addAll(List.of(rooms));
-
-        // 5. Add the Rooms provided in the Array to the Room Inventory
-
+        this.inventory.addAll(Arrays.asList(rooms));
     }
 
     public void removeRoom(Room room) {
-
-        // 6. Remove the provided Room from the Room Inventory
-        inventory.remove(room);
+        this.inventory.remove(room);
     }
 
 }
